foxed issue with not spacing above footer

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -58,5 +58,5 @@ h1, h2, h3, h5 {
 }
 
 main.container {
-    height: 100vh;
+    min-height: 100vh;
 }
